[package]
name = "rust-axum-email-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
dotenv = "0.15.0"
lettre = "0.10.1"
serde = { version = "1.0.149", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
